--- a/core/templates/base.html
+++ b/core/templates/base.html
@@ -28,12 +28,12 @@
               <a href="{% url 'index' %}">Início</a>
             </li>
             <li class="dropdown">
-              <a class="dropdown-toggle" data-toggle="dropdown" href="#" id="download">Categorias <span class="caret"></span></a>
+              <a class="dropdown-toggle" data-toggle="dropdown" href="{% url 'catalog:product_list' %}" id="download">Categorias <span class="caret"></span></a>
               <ul class="dropdown-menu" aria-labelledby="download">
 
                 {% for category in categories %}
                 
-                <li><a href="#">{{ category.name }}</a></li>
+                <li><a href="{% url 'catalog:category' slug=category.slug %}">{{ category }}</a></li>
                 
                   {% endfor %}
               </ul>
