--- a/core/templates/base.html
+++ b/core/templates/base.html
@@ -33,7 +33,7 @@
 
                 {% for category in categories %}
                 
-                <li><a href="{% url 'catalog:category' slug=category.slug %}">{{ category }}</a></li>
+                <li><a href="{{ category.get_absolute_url }}">{{ category }}</a></li>
                 
                   {% endfor %}
               </ul>
