starting modulo users

--- a/catalog/templates/catalog/product_list.html
+++ b/catalog/templates/catalog/product_list.html
@@ -1,5 +1,7 @@
 {% extends "base.html" %}
 
+{% load pagination %}
+
 {% block title %}
 
 Listagem de Produtos | {{block.super}}
@@ -26,9 +28,8 @@ Listagem de Produtos | {{block.super}}
             </div>
         </div>
     </div>
-    {% endfor %}
 
-   
-   
+    {% endfor %}
 </div>
+{% pagination request paginator page_obj %}
 {% endblock %}
