--- a/core/templates/base.html
+++ b/core/templates/base.html
@@ -15,7 +15,7 @@
     <div class="navbar navbar-default navbar-fixed-top">
       <div class="container">
         <div class="navbar-header">
-          <a href="" class="navbar-brand">Django E-Commerce</a>
+          <a href="{% url 'index' %}" class="navbar-brand">Django E-Commerce</a>
           <button class="navbar-toggle" type="button" data-toggle="collapse" data-target="#navbar-main">
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
@@ -43,7 +43,13 @@
 			</li>
           </ul>
           <ul class="nav navbar-nav navbar-right">
-            <li><a href="#">Minha Conta</a></li>
+             {% if user.is_authenticated %}
+              <li><a href="{% url 'logout' %}">Sair</a></li>
+
+            {% else %}
+            <li><a href="{% url 'login' %}">Entrar</a></li>
+            {% endif %}
+
           </ul>
         </div>
       </div>
