--- a/core/templates/base.html
+++ b/core/templates/base.html
@@ -43,11 +43,12 @@
 			</li>
           </ul>
           <ul class="nav navbar-nav navbar-right">
-             {% if user.is_authenticated %}
-              <li><a href="{% url 'logout' %}">Sair</a></li>
+             {% if user.is_authenticated %} 
+             <li><a href="{% url 'logout' %}">Sair</a></li>
 
             {% else %}
             <li><a href="{% url 'login' %}">Entrar</a></li>
+            <li><a href="{% url 'accounts:register' %}">Registro</a></li>
             {% endif %}
 
           </ul>
