--- a/catalog/templates/catalog/product.html
+++ b/catalog/templates/catalog/product.html
@@ -17,7 +17,11 @@
         </a>
     </div>
     <div class="col-sm-8">
-        {{ product.description | linebreaks }}
+      <p class="text-right">
+        <a href="{% url 'checkout:create_cartitem' product.slug %}" class="btn btn-success">Adicionar ao Carrinho</a>
+      </p>
+
+       {{ product.description | linebreaks }}
 
     </div>
   </div>
