--- a/core/templates/base.html
+++ b/core/templates/base.html
@@ -57,9 +57,14 @@
       </div>
     </div>
     <div class="container margin-top">
-        {% block container %}
-        
-        {% endblock %}
+      {% block messages %}
+      {% for message in messages %}
+      <div class="alert alert-{{ message.tags }}">
+        {{ message }}
+      </div>
+      {% endfor %}
+      {% endblock %}
+      {% block container %}{% endblock %}
 
 		<footer>
 			<div class="row">
