--- a/accounts/templates/accounts/index.html
+++ b/accounts/templates/accounts/index.html
@@ -12,9 +12,10 @@
       <div class="col-md-4">
           <div class="list-group">
             <a href="{% url 'accounts:index' %}" class="list-group-item active">Minha Conta</a>
-            <a href="{% url 'accounts:order_list' %}" class="list-group-item">Meus Pedidos</a>
+            <a href="{% url 'checkout:order_list' %}" class="list-group-item">Meus Pedidos</a>
             <a href="{% url 'accounts:update_user' %}" class="list-group-item">Alterar Dados</a>
             <a href="{% url 'accounts:update_password' %}" class="list-group-item">Alterar Senha</a>
+            
             
           </div>
       </div>
