--- a/core/templates/base.html
+++ b/core/templates/base.html
@@ -3,14 +3,12 @@
 <html lang="en">
 <head>
 	<meta charset="utf-8">
-
-	<title>{% block title %}Django E-Commerce {% endblock %}</title>
-
+	<title>{% block title %}Django E-Commerce{% endblock %}</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 	<link rel="stylesheet" href="{% static 'assets/bootstrap.min.css' %}" media="screen" />
 	<link rel="stylesheet" href="{% static 'assets/custom.min.css' %}" media="screen" />
-  <link rel="stylesheet" href="{% static 'assets/extra.css' %}" media="screen" />
+	<link rel="stylesheet" href="{% static 'assets/extra.css' %}" media="screen" />
 </head>
 <body>
     <div class="navbar navbar-default navbar-fixed-top">
@@ -31,12 +29,9 @@
             <li class="dropdown">
               <a class="dropdown-toggle" data-toggle="dropdown" href="{% url 'catalog:product_list' %}" id="download">Categorias <span class="caret"></span></a>
               <ul class="dropdown-menu" aria-labelledby="download">
-
-                {% for category in categories %}
-                
-                <li><a href="{{ category.get_absolute_url }}">{{ category }}</a></li>
-                
-                  {% endfor %}
+				{% for category in categories %}
+				<li><a href="{{ category.get_absolute_url }}">{{ category }}</a></li>
+				{% endfor %}
               </ul>
             </li>
 			<li>
@@ -44,31 +39,27 @@
 			</li>
           </ul>
           <ul class="nav navbar-nav navbar-right">
-             {% if user.is_authenticated %} 
-             <li><a href="{% url 'checkout:cart_item' %}">Carrinho</a></li>
-             <li><a href="{% url 'accounts:index' %}">Conta</a></li>
-             <li><a href="{% url 'logout' %}">Sair</a></li>
-
-            {% else %}
-            <li><a href="{% url 'login' %}">Entrar</a></li>
-            <li><a href="{% url 'accounts:register' %}">Registro</a></li>
-            {% endif %}
-            
-
+			  <li><a href="{% url 'checkout:cart_item' %}">Carrinho</a></li>
+			{% if user.is_authenticated %}
+			<li><a href="{% url 'accounts:index' %}">Conta</a></li>
+			<li><a href="{% url 'logout' %}">Sair</a></li>
+			{% else %}
+			<li><a href="{% url 'login' %}">Entrar</a></li>
+			<li><a href="{% url 'accounts:register' %}">Cadastro</a></li>
+			{% endif %}
           </ul>
         </div>
       </div>
     </div>
     <div class="container margin-top">
-      {% block messages %}
-      {% for message in messages %}
-      <div class="alert alert-{{ message.tags }}">
-        {{ message }}
-      </div>
-      {% endfor %}
-      {% endblock %}
-      {% block container %}{% endblock %}
-
+		{% block messages %}
+		{% for message in messages %}
+		<div class="alert alert-{{ message.tags }}">
+			{{ message }}
+		</div>
+		{% endfor %}
+		{% endblock %}
+		{% block container %}{% endblock %}
 		<footer>
 			<div class="row">
 			  <div class="col-lg-12">
