--- a/core/templates/base.html
+++ b/core/templates/base.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 {% load static %}
-<html lang="en">
+<html lang="pt-br">
 <head>
 	<meta charset="utf-8">
-	<title>{% block title %}Django E-Commerce{% endblock %}</title>
+	<title>{% block title %}{% endblock %}</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+	
 	<link rel="stylesheet" href="{% static 'assets/bootstrap.min.css' %}" media="screen" />
 	<link rel="stylesheet" href="{% static 'assets/custom.min.css' %}" media="screen" />
 	<link rel="stylesheet" href="{% static 'assets/extra.css' %}" media="screen" />
@@ -14,7 +15,7 @@
     <div class="navbar navbar-default navbar-fixed-top">
       <div class="container">
         <div class="navbar-header">
-          <a href="{% url 'index' %}" class="navbar-brand">Django E-Commerce</a>
+          <a href="{% url 'index' %}" class="navbar-brand">Git Cursos</a>
           <button class="navbar-toggle" type="button" data-toggle="collapse" data-target="#navbar-main">
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
@@ -24,7 +25,7 @@
         <div class="navbar-collapse collapse" id="navbar-main">
           <ul class="nav navbar-nav">
             <li>
-              <a href="{% url 'index' %}">Início</a>
+              <a href="{% url 'catalog:product_list' %}">Todos os Cursos</a>
             </li>
             <li class="dropdown">
               <a class="dropdown-toggle" data-toggle="dropdown" href="{% url 'catalog:product_list' %}" id="download">Categorias <span class="caret"></span></a>
@@ -36,9 +37,20 @@
             </li>
 			<li>
 				<a href="{% url 'contact' %}">Contato</a>
+				
 			</li>
           </ul>
-          <ul class="nav navbar-nav navbar-right">
+
+  <form class="navbar-form navbar-left" role="search" action="{% url 'catalog:product_list' %}">
+	        <div class="form-group">
+	          <input name="q" type="text" class="form-control" placeholder="Pesquise seu Curso..." />
+	        </div>
+	      </form>
+
+
+
+		  
+		          <ul class="nav navbar-nav navbar-right">
 			  <li><a href="{% url 'checkout:cart_item' %}">Carrinho</a></li>
 			{% if user.is_authenticated %}
 			<li><a href="{% url 'accounts:index' %}">Conta</a></li>
@@ -65,16 +77,23 @@
 			  <div class="col-lg-12">
 			    <ul class="list-unstyled">
 			      <li class="pull-right"><a href="#top">Voltar ao Topo</a></li>
-			      <li><a href="">Início</a></li>
-			      <li><a href="">Produtos</a></li>
-			      <li><a href="">Contato</a></li>
-			      <li><a href="">Termos e Privacidade</a></li>
+			      <li><a href="{% url 'index' %}">Início</a></li>
+			      <li><a href="{% url 'catalog:product_list' %}">Produtos</a></li>
+			      <li><a href="{% url 'contact' %}">Contato</a></li>
+			      <li><a href="{% url 'privacy' %}">Termos e Privacidade</a></li>
 			    </ul>
 			  </div>
 			</div>
 		</footer>
 	</div>
-	<script src="https://code.jquery.com/jquery-1.10.2.min.js"></script>
-    <script src="{% static 'assets/bootstrap.min.js' %}"></script>
+
+
+<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+
+
+
+	{% block scripts %} {% endblock %}
 </body>
 </html>
