--- a/catalog/templates/catalog/product_list.html
+++ b/catalog/templates/catalog/product_list.html
@@ -3,9 +3,7 @@
 {% load pagination %}
 
 {% block title %}
-
-Listagem de Produtos | {{block.super}}
-
+    Listagem de Produtos | {{ block.super }}
 {% endblock %}
 
 {% block container %}
@@ -13,10 +11,26 @@ Listagem de Produtos | {{block.super}}
     <h1>Produtos</h1>
 </div>
 <div class="row">
-
-    {% for product in product_list %}
+    {% for product in products %}
     {% include "catalog/_product.html" %}
     {% endfor %}
 </div>
 {% pagination request paginator page_obj %}
+{% endblock %}
+
+{% block scripts %}
+<script type="text/javascript">
+$(function(){
+    $('.cart-item-add').on('click', function(e){
+        e.preventDefault();
+        $.ajax({
+            url: $(this).attr('href'),
+            dataType: 'json',
+            success: function(data, textStatus, jqXHR){
+                alert(data.message);
+            }
+        });
+    });
+});
+</script>
 {% endblock %}
